tests/ui/diagnostic-not-implemented-try-from-bytes.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-try-from-bytes.rs:17:28
   |
17 |     takes_try_from_bytes::<NotZerocopy>();
   |                            ^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_try_from_bytes`
  --> $DIR/diagnostic-not-implemented-try-from-bytes.rs:20:28
   |
20 | fn takes_try_from_bytes<T: TryFromBytes>() {}
   |                            ^^^^^^^^^^^^ required by this bound in `takes_try_from_bytes`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
